Closed
Bug 1491289
Opened 7 years ago
Closed 7 years ago
Nightly: build fails when compiling third_party/prio: fatal error: nss/blapit.h: No such file or directory
Categories
(Toolkit :: General, defect, P5)
Toolkit
General
Tracking
()
RESOLVED
FIXED
mozilla64
| Tracking | Status | |
|---|---|---|
| firefox64 | --- | fixed |
People
(Reporter: eclipseo, Assigned: rhelmer)
References
Details
Attachments
(1 file)
3:40.71 In file included from /builddir/build/BUILD/gecko-dev-a548d10a8c6e1e5d762714832715a880d9d290d8/third_party/prio/prio/client.c:9:
3:40.72 /builddir/build/BUILD/gecko-dev-a548d10a8c6e1e5d762714832715a880d9d290d8/third_party/prio/include/mprio.h:17:10: fatal error: nss/blapit.h: No such file or directory
3:40.72 #include <nss/blapit.h>
3:40.72 ^~~~~~~~~~~~~~
3:40.72 compilation terminated.
3:40.72 gmake[4]: *** [/builddir/build/BUILD/gecko-dev-a548d10a8c6e1e5d762714832715a880d9d290d8/config/rules.mk:779: client.o] Error 1
I'm using using system-wide nss and nspr. See build log here: https://copr-be.cloud.fedoraproject.org/results/eclipseo/firefox-nightly/fedora-rawhide-x86_64/00798109-firefox-nightly/build.log.gz
Comment 1•7 years ago
|
||
NSS headers should not be included with nss/ paths, but "directly".
Updated•7 years ago
|
Priority: -- → P5
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → rhelmer
Flags: needinfo?(rhelmer)
| Assignee | ||
Comment 2•7 years ago
|
||
Going to fix this upstream then re-vendor into m-c: https://github.com/mozilla/libprio/pull/40
| Assignee | ||
Comment 3•7 years ago
|
||
Comment 4•7 years ago
|
||
Comment on attachment 9009771 [details]
Bug 1491289 - re-vendor libprio to pick up fixes for using system NSS r?glandium
Mike Hommey [:glandium] has approved the revision.
Attachment #9009771 -
Flags: review+
Pushed by rhelmer@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/131a80cf6661
re-vendor libprio to pick up fixes for using system NSS r=glandium
| Assignee | ||
Updated•7 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment 6•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox64:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in
before you can comment on or make changes to this bug.
Description
•