prio/prg.c
@@ -7,8 +7,8 @@
  */
 
 #include <mprio.h>
-#include <nss/blapit.h>
-#include <nss/pk11pub.h>
+#include <blapit.h>
+#include <pk11pub.h>
 #include <string.h>
 
 #include "prg.h"
